# step-by-step-immo

./: .gitignore  LICENSE  README.fr.md  README.md  pyproject.toml
src/immo/: __init__.py  config.py  extensions.py  interface.py  scripts.py  seed.py
src/immo/migrations/: env.py
src/immo/projects/: __init__.py  models.py  router.py  schemas.py
src/immo/services/: __init__.py  models.py  router.py  schemas.py
src/immo/static/css/: index.css  login.css  main.css  main2.css  project-details.css  project-form.css  register.css  subscription.css  user-account.css
src/immo/static/js/: dashboard.js  index.js  login.js  main.js
src/immo/subscriptions/: __init__.py  models.py  router.py  schemas.py
src/immo/templates/: add_step.html  base.html  create_project.html  delete_project.html  delete_step.html  edit_project.html  edit_step.html  index.html  layout.html  login.html  main.html  manage_subscription.html  project-details.html  project_details.html  register.html  subscribe.html  user_account.html
src/immo/templates/components/: footer.html  header.html  registration_forms.html
src/immo/users/: __init__.py  admin_router.py  models.py  router.py  schemas.py
src/immo/utils/: __init__.py  models.py  router.py  schemas.py
